When importing transactions, make sure not to match against the transactions already imported during the same session.

BUG: 419975